feat(issue-109): generate review history contracts